--- a/Web_Visualisations/cloudiness.html
+++ b/Web_Visualisations/cloudiness.html
@@ -33,10 +33,10 @@
                           </div>
                       </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#comparisons.html">Comparison<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="comparisons.html">Comparison<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#data.html">Data<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="data.html">Data<span class="sr-only">(current)</span></a>
           </li>
         </ul>  
       
