changes for sizing fixes

--- a/Web_Visualisations/comparisons.html
+++ b/Web_Visualisations/comparisons.html
@@ -42,37 +42,46 @@
       
     </div>  
   </nav>
-  <div class="container-fluid">
+  
+  
+  <div class="container">
    <div class = "row">
 
 <!-- Comparisons -->
       <div class = "comparebox"> 
-      <div style="background:white" class="col-lg-7">
+      <div style="background:white" class="col-md-12">
         <h4>Comparison: Latitude vs. X</h4>
+        <p>Click on the plot for more analysis</p>
+      </div>  
         <hr>
           <div class="row">
+            <div class="col-md-6">
               <a href="temp.html">
                 <h5 class="text-center">vs. Max Temperature </h5>
-                <img src="Resources/assets/images/Fig1.png" width="450px" alt="Max_Temperature">
-              </a>           
+                <img src="Resources/assets/images/Fig1.png" class="compareboximg img-responsive"  alt="Max_Temperature">
+              </a>  
+            </div>  
+            <div class="col-md-6">     
               <a href="humidity.html">
                 <h5 class="text-center">vs. Humidity </h5>
-                <img src="Resources/assets/images/Fig2.png" width="450px" alt="Humidity_Map">
+                <img src="Resources/assets/images/Fig2.png"  class="compareboximg img-responsive" alt="Humidity_Map">
               </a>
+            </div>   
           </div>  
-          <br>
-          <div class="column"> 
-            <hr>
+          <div class = "row" >
+          <div class="col-md-6"> 
               <a href="cloudiness.html">
                 <h5 class="text-center">vs. Cloudiness </h5>  
-                <img src="Resources/assets/images/Fig3.png" width="450px" alt="Cloudiness_Map">
+                <img src="Resources/assets/images/Fig3.png"  class="compareboximg img-responsive" alt="Cloudiness_Map">
               </a>
+          </div>      
+          <div class="col-md-6">    
               <a href="windspeed.html">
                 <h5 class="text-center">vs. WindSpeed </h5>
-                <img src="Resources/assets/images/Fig4.png" width="450px" alt="WindSpeed_Map">
-                </a>    
-          </div>  
-      </div>
+                <img src="Resources/assets/images/Fig4.png"  class="compareboximg img-responsive"  alt="WindSpeed_Map">
+              </a>    
+          </div>
+        </div>  
       </div>
    </div>
   </div>
