--- a/Web_Visualisations/data.html
+++ b/Web_Visualisations/data.html
@@ -47,7 +47,7 @@
 
 <!-- Table -->
     <div class = "tablebox"> 
-    <div style="background:white" class="col-lg-7 col-md-8 col-sm-12">
+    <div style="background:white" class="col-md-12">
         <h3>Data</h3>
         
         <hr>
